--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #fdfaf6;
+            background-color: #fdfaf6; /* 柔和的米白色背景 */
             color: #333;
         }
         .hero-section {
-            background: linear-gradient(to bottom right, #fdfaf6, #ffece6);
+            background: linear-gradient(to bottom right, #fdfaf6, #ffece6); /* 柔和的漸變背景 */
             padding: 8rem 0;
             text-align: center;
         }
         .section-title {
-            color: #8B4513;
+            color: #8B4513; /* 深棕色，溫暖而有質感 */
             font-size: 2.5rem;
             font-weight: 700;
             margin-bottom: 2rem;
         }
         .btn-primary {
-            background-color: #CD853F;
+            background-color: #CD853F; /* 溫暖的棕色 */
             color: white;
             padding: 0.8rem 2rem;
             border-radius: 9999px;
@@ -32,7 +32,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         .btn-primary:hover {
-            background-color: #A0522D;
+            background-color: #A0522D; /* 加深色 */
         }
         .card {
             background-color: white;
@@ -73,20 +73,78 @@
                 display: block; /* 在小螢幕下顯示 */
              }
         }
+
+        /* 新增的選擇項目樣式 */
+        .select-option {
+            border: 2px solid transparent;
+            cursor: pointer;
+            transition: all 0.2s ease-in-out;
+            display: flex; /* Make it a flex container */
+            flex-direction: column; /* Stack children vertically */
+            align-items: center; /* Center items horizontally */
+            text-align: center; /* Center text within the option */
+        }
+        .select-option:hover {
+            border-color: #F0A3A7; /* 輕微的玫瑰色 */
+            transform: translateY(-2px);
+        }
+        .select-option.selected {
+            border-color: #E05663; /* 選擇後的深玫瑰色 */
+            box-shadow: 0 0 0 3px rgba(224, 86, 99, 0.3);
+            transform: translateY(-2px);
+        }
+        /* 顏色預覽圓圈的樣式 */
+        .color-circle {
+            width: 48px; /* w-12 */
+            height: 48px; /* h-12 */
+            border-radius: 50%; /* Make it circular */
+            border: 1px solid #ccc; /* Add a subtle border */
+            margin-bottom: 0.75rem; /* space-y-3 between circle and text */
+        }
+        /* 新增的圖片樣式，用於顏色選項卡片內的圖片 */
+        .select-option-image {
+            width: 100%; /* Take full width of its parent */
+            height: auto; /* Maintain aspect ratio */
+            border-radius: 0.75rem; /* rounded-lg */
+            margin-top: 1rem; /* Add some space above the image */
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Subtle shadow for images */
+        }
+
+        /* 以下為新增的樣式，用於調整左上角標誌 */
+        .GAuSPc { /* 原本的class，為確保樣式效果保留 */
+            display: flex;
+            align-items: center;
+            text-decoration: none; /* 移除下劃線 */
+            color: inherit; /* 繼承父元素顏色 */
+        }
+        .lzy1Td { /* 圖片的class */
+            height: 24px; /* 或根據實際需求調整 */
+            width: 24px; /* 或根據實際需求調整 */
+            margin-right: 8px; /* 圖片與文字間距 */
+        }
+        .QTKDff { /* 文字的class */
+            font-size: 1.25rem; /* text-xl, 或根據實際需求調整 */
+            font-weight: 600; /* font-semibold */
+            color: #333; /* text-gray-800 */
+        }
+        .p46B7e {
+            /* 額外 class 的樣式 */
+        }
     </style>
 </head>
 <body>
 
     <nav class="bg-white p-4 shadow-md sticky top-0 z-50">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-gray-800">
-                <span class="text-rose-500">愛</span>的見證
+            <a class="GAuSPc" aria-hidden="false" tabindex="0">
+                <img src="https://img.notionusercontent.com/s3/prod-files-secure%2F1d07182e-0ccd-4d70-80e0-e2882f2135ed%2F35d0a0f4-58ad-4b88-8de3-446e5d60678b%2F%E5%9C%96%E7%89%87_13.png/size/w=250?exp=1747850306&sig=eyTjqHqCWq_fvkDuDTTZKtcgrXnAzvw43uzDF2yXJko&id=d94f2cd5-43fd-4d5a-b4b9-a86c856e450c&table=block&userId=469afa7f-c90a-4337-8db1-e0f7af879ef8" class="lzy1Td" role="img" aria-label="網站首頁" jsname="SwcDWb">
+                <span class="QTKDff text-rose-500">My O!</span>證書套
             </a>
 
             <div class="desktop-nav-links space-x-6">
                 <a href="#product-info" class="text-gray-600 hover:text-rose-500 transition-colors">產品簡介</a>
                 <a href="#customization" class="text-gray-600 hover:text-rose-500 transition-colors">客製化</a>
-                <a href="#designs" class="text-gray-600 hover:text-rose-500 transition-colors">設計樣式</a>
+                <a href="#designs" class="text-gray-600 hover:text-rose-500 transition-colors">款式與設計</a>
                 <a href="#contact" class="text-gray-600 hover:text-rose-500 transition-colors">聯絡我們</a>
             </div>
 
@@ -100,7 +158,7 @@
         <div class="mobile-nav-links hidden md:hidden bg-white py-2" id="mobile-menu">
             <a href="#product-info" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">產品簡介</a>
             <a href="#customization" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">客製化</a>
-            <a href="#designs" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">設計樣式</a>
+            <a href="#designs" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">款式與設計</a>
             <a href="#contact" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">聯絡我們</a>
         </div>
     </nav>
@@ -124,7 +182,7 @@
             <h2 class="section-title text-center">產品簡介</h2>
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="flex justify-center">
-                    <img src="https://placehold.co/500x350/F0D9D9/8B4513?text=結婚證書套示意圖" alt="結婚證書套示意圖" class="rounded-2xl shadow-lg">
+                    <img src="https://lh5.googleusercontent.com/DWeIfZzwIHgSE31vh0akZf8RFa4FSApdYuzT_Cer8xnRZ3AdnIqurxsmKCM82KVA1GmyjdCxfLDtzuL1f1RtYvojfmzK-Ee38rYaossg4OfSVJ4oKA5iaryucGf6cRqe3mCcj5nfJwXmZP3785AdCaWNgTR_M7BlcNdw4a8CDRX9eJxBNg=w1326?key=Bl7sKK6_IAHx2-hi6KOMLg" alt="結婚證書套示意圖" class="rounded-2xl shadow-lg">
                 </div>
                 <div>
                     <p class="text-lg text-gray-700 mb-6 leading-relaxed">
@@ -185,54 +243,70 @@
                     <p class="text-gray-600">我們提供多款精選圖案與中英文字組合，滿足不同風格需求。</p>
                 </div>
             </div>
-            <a href="#designs" class="btn-primary mt-12 text-lg font-semibold inline-block">
-                查看設計樣式
-            </a>
         </div>
     </section>
-
     <section id="designs" class="py-16 bg-white">
-        <div class="container mx-auto px-4">
-            <h2 class="section-title text-center">精選設計樣式</h2>
-            <p class="text-lg text-gray-700 mb-10 text-center max-w-3xl mx-auto">
+        <div class="container mx-auto px-4 text-center">
+            <h2 class="section-title">選擇您的專屬款式與設計</h2>
+            <p class="text-lg text-gray-700 mb-10 max-w-3xl mx-auto">
                 從簡約優雅到浪漫古典，總有一款能完美襯托您們的愛情故事。
+                在此您可以選擇證書套的顏色與質地，以及豐富的圖案設計樣式。
             </p>
-            <div class="grid md:grid-cols-3 lg:grid-cols-4 gap-8">
-                <div class="card p-0 overflow-hidden">
-                    <img src="https://placehold.co/400x300/E0BBE4/957DAD?text=設計樣式1" alt="設計樣式1" class="w-full h-48 object-cover">
-                    <div class="p-5">
-                        <h3 class="font-semibold text-lg mb-2 text-gray-800">經典優雅系列</h3>
-                        <p class="text-gray-600 text-sm">簡潔線條，永恆經典，適合追求簡約美學的您。</p>
+
+            <div class="mb-12 text-left max-w-4xl mx-auto">
+                <h3 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
+                    選擇證書套顏色 | Select the Color of the Certificate Cover
+                    <span class="text-red-500">*</span>
+                </h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div class="card select-option p-6" data-type="color" data-value="beige">
+                        <div class="color-circle bg-gray-200 border-gray-300" style="background-color: #f6dba6;"></div>
+                        <span class="text-lg font-medium text-gray-800">米色 Beige ｜亞麻布 Linen Texture</span>
+                        <img src="https://lh3.googleusercontent.com/EyvwMDo-o6P-t9f5d3Fi1tIG8nkQr27bPNzECe090r5f34Nd-1hN60Rb2dNJsmAsryFgX-oH0YGP19AbsarAq9523CkTXyIBYm5305AgB7ks31DRJVQLj1RAN1dui2Vx3UVHh3bald7ypdlBtpW4USkFdOYsjSDa7pftHF5aF5kG0HfOFQ=w260?key=Bl7sKK6_IAHx2-hi6KOMLg" alt="米色證書套預覽" class="select-option-image">
                     </div>
-                </div>
-                <div class="card p-0 overflow-hidden">
-                    <img src="https://placehold.co/400x300/FFC72C/F7931A?text=設計樣式2" alt="設計樣式2" class="w-full h-48 object-cover">
-                    <div class="p-5">
-                        <h3 class="font-semibold text-lg mb-2 text-gray-800">浪漫花語系列</h3>
-                        <p class="text-gray-600 text-sm">以花卉圖案點綴，寓意愛情如花般綻放。</p>
-                    </div>
-                </div>
-                <div class="card p-0 overflow-hidden">
-                    <img src="https://placehold.co/400x300/A7D9B4/6B8E23?text=設計樣式3" alt="設計樣式3" class="w-full h-48 object-cover">
-                    <div class="p-5">
-                        <h3 class="font-semibold text-lg mb-2 text-gray-800">現代幾何系列</h3>
-                        <p class="text-gray-600 text-sm">時尚幾何圖形，展現現代感與設計張力。</p>
-                    </div>
-                </div>
-                <div class="card p-0 overflow-hidden">
-                    <img src="https://placehold.co/400x300/B0E0E6/4682B4?text=設計樣式4" alt="設計樣式4" class="w-full h-48 object-cover">
-                    <div class="p-5">
-                        <h3 class="font-semibold text-lg mb-2 text-gray-800">童話夢幻系列</h3>
-                        <p class="text-gray-600 text-sm">融入夢幻元素，讓您的愛情故事充滿魔法。</p>
+                    <div class="card select-option p-6" data-type="color" data-value="blue">
+                        <div class="color-circle bg-blue-200 border-blue-300" style="background-color: #0a477e;"></div>
+                        <span class="text-lg font-medium text-gray-800">藍色 Blue ｜磨砂珠光 Frosted Pearl</span>
+                        <img src="https://lh5.googleusercontent.com/y9MGsoQMDbL1mUM6oFMqqJcGkOZGskObnB1ccGAoV8JsjptZsZ_9atT1EJpWs4AK-i1KN1RDgXZOvJKru2th0MV4mT6YLP105XY_1TQ4ZMOWVFfNNK3iu6rEBfSUOQsBYaYstGEtm8-hCYdZpPASeJ7JErned_VDZJdcU3PN29F3FH4hHw=w260?key=Bl7sKK6_IAHx2-hi6KOMLg" alt="藍色證書套預覽" class="select-option-image">
                     </div>
                 </div>
             </div>
-            <div class="text-center mt-12">
-                <a href="#" class="btn-primary text-lg font-semibold inline-block">
-                    查看所有設計
-                </a>
+
+            <div class="mb-12 text-left max-w-4xl mx-auto">
+                <h3 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
+                    選擇證書套設計樣式 | Support English/Chinese Character
+                    <span class="text-red-500">*</span>
+                </h3>
+                <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-6">
+                    <div class="card select-option text-center p-4" data-type="style" data-value="style1">
+                        <img src="https://lh4.googleusercontent.com/2vA2HWi9vUqzkhcx9iFEOyb80Em4VeVHrbyfCz65cF0pIIvzzHO8-g1fPX268pD2-aOA5I179u06rIA2Byfx9eMjQRK9CyrhTvA8pESlfz0HErKN38wPO_dvz-yLxka-k4I498zzU_N_mXOeRkl5VZTHz5B-KEOwDc6zafakUUTGcL2Xsw=w260?key=Bl7sKK6_IAHx2-hi6KOMLg" alt="款式1" class="w-full h-auto rounded-md mb-3">
+                        <span class="block font-medium text-gray-800">款式1｜Cert Style 1</span>
+                        <p class="text-gray-600 text-sm mt-1">簡潔線條，永恆經典。</p>
+                    </div>
+                    <div class="card select-option text-center p-4" data-type="style" data-value="style2">
+                        <img src="https://lh4.googleusercontent.com/tZHydxea1_xQzUhGUuqqK5F0twzpoAlB0KizzVW2fkTy6U3jEDD8KoDc50szTUTbYpSYAh4Y8qPjHUpXNSWKA8LgOjxShFA2GfDbQUdPjQ_gNl7aeKBHtNItFoXKi7mCW4cHJV1ON20lP_g0ixqOZj2HNu9KpyT88jUoxjW7zNKeYctwPA=w260?key=Bl7sKK6_IAHx2-hi6KOMLg" alt="款式2" class="w-full h-auto rounded-md mb-3">
+                        <span class="block font-medium text-gray-800">款式2｜Cert Style 2</span>
+                        <p class="text-gray-600 text-sm mt-1">以花卉圖案點綴，寓意愛情如花般綻放。</p>
+                    </div>
+                    <div class="card select-option text-center p-4" data-type="style" data-value="style3">
+                        <img src="https://lh4.googleusercontent.com/E_osHrUThjDoFlGXRyIc8dmupataXQTfuHPMsZ5Lo88D4vbKBU92k4aYDQODm-bNDXDwT1R9bR1-1zF6bog8bmgc37-ELhqF09Av8KoTNEjr7tvS4RJVUf1bh5cvvklO7Xyrbzu_t3T08E0jazGluDpAfLqCpAioW52AjG-qiazUQ3m4hw=w260?key=Bl7sKK6_IAHx2-hi6KOMLg" alt="款式3" class="w-full h-auto rounded-md mb-3">
+                        <span class="block font-medium text-gray-800">款式3｜Cert Style 3</span>
+                        <p class="text-gray-600 text-sm mt-1">時尚幾何圖形，展現現代感。</p>
+                    </div>
+                    <div class="card select-option text-center p-4" data-type="style" data-value="style4">
+                        <img src="https://lh5.googleusercontent.com/cT0I1e_7OMQM7S0ZNXHYw7d5FXJIzs66MUcC26Bad3Rmy0nF8kGeA14d5LjVTI_7q7j3Zs7qUKsBNqADBvizeesCiIaXj7ZstY8GBhTV5dgl30eEOw2j45tVNmfuRAvtpg7YaNJQcr9a4QcdY84_0gX-Y5rf-coN29Cpvwzs0eswcUu0aw=w260?key=Bl7sKK6_IAHx2-hi6KOMLg" alt="款式4" class="w-full h-auto rounded-md mb-3">
+                        <span class="block font-medium text-gray-800">款式4｜Cert Style 4</span>
+                        <p class="text-gray-600 text-sm mt-1">融入夢幻元素，充滿魔法。</p>
+                    </div>
+                    <div class="card select-option text-center p-4" data-type="style" data-value="style5">
+                        <img src="https://lh5.googleusercontent.com/uyPFSJ_hIroKs3CWWZVMpyBlfxRKQiyMsoaKeXcbuGD_W3_PttGMziJN4tL8lrtxQMXCUWYXX1Ztnvp0z2oUW3pfEj3zHnL-Azt3705gVMqMekKOR4UV1lVJmAFD_lkLYfPO61wKQbCvQZ0Dts0xV970ndZatOx42mGn6lB7C4iyWvAZog=w260?key=Bl7sKK6_IAHx2-hi6KOMLg" alt="款式5" class="w-full h-auto rounded-md mb-3">
+                        <span class="block font-medium text-gray-800">款式5｜Cert Style 5</span>
+                        <p class="text-gray-600 text-sm mt-1">更多風格選擇，等待您發掘。</p>
+                    </div>
+                    </div>
             </div>
-        </div>
+
+            </div>
     </section>
 
     <section class="py-16 bg-rose-50">
@@ -243,7 +317,7 @@
                 它承載著您們的誓言，見證著歲月的流轉，並將這份愛的故事，傳遞給未來的世代。
             </p>
             <div class="flex justify-center">
-                <img src="https://placehold.co/600x400/D4A5A5/8B4513?text=夫妻手持證書套" alt="夫妻手持證書套" class="rounded-2xl shadow-lg max-w-full h-auto">
+                <img src="https://img.notionusercontent.com/s3/prod-files-secure%2F1d07182e-0ccd-4d70-80e0-e2882f2135ed%2F35d0a0f4-58ad-4b88-8de3-446e5d60678b%2F%E5%9C%96%E7%89%87_13.png/size/w=250?exp=1747850306&sig=eyTjqHqCWq_fvkDuDTTZKtcgrXnAzvw43uzDF2yXJko&id=d94f2cd5-43fd-4d5a-b4b9-a86c856e450c&table=block&userId=469afa7f-c90a-4337-8db1-e0f7af879ef8" alt="夫妻手持證書套" class="rounded-2xl shadow-lg max-w-full h-auto">
             </div>
         </div>
     </section>
@@ -278,7 +352,7 @@
 
     <footer class="bg-gray-800 text-white py-10">
         <div class="container mx-auto px-4 text-center">
-            <p class="mb-4">&copy; 2025 愛的見證. 版權所有。</p>
+            <p class="mb-4">© 2025 愛的見證. 版權所有。</p>
             <div class="space-x-6">
                 <a href="#" class="footer-link">隱私政策</a>
                 <a href="#" class="footer-link">服務條款</a>
@@ -289,17 +363,48 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
+            // Mobile Menu Toggle
             const mobileMenuButton = document.getElementById('mobile-menu-button');
             const mobileMenu = document.getElementById('mobile-menu');
 
-            mobileMenuButton.addEventListener('click', function () {
-                mobileMenu.classList.toggle('hidden'); // Toggle visibility
-            });
+            if (mobileMenuButton && mobileMenu) {
+                mobileMenuButton.addEventListener('click', function () {
+                    mobileMenu.classList.toggle('hidden'); // Toggle visibility
+                });
 
-            // Optional: Close menu when a link is clicked
-            mobileMenu.querySelectorAll('a').forEach(link => {
-                link.addEventListener('click', () => {
-                    mobileMenu.classList.add('hidden');
+                // Optional: Close menu when a link is clicked
+                mobileMenu.querySelectorAll('a').forEach(link => {
+                    link.addEventListener('click', () => {
+                        mobileMenu.classList.add('hidden');
+                    });
+                });
+            }
+
+            // Selection functionality for Color and Style Options
+            const selectOptions = document.querySelectorAll('.select-option');
+
+            selectOptions.forEach(option => {
+                option.addEventListener('click', function() {
+                    const type = this.dataset.type; // 'color' or 'style'
+                    const value = this.dataset.value;
+
+                    // Remove 'selected' from other options of the same type
+                    document.querySelectorAll(`.select-option[data-type="${type}"]`).forEach(sibling => {
+                        sibling.classList.remove('selected');
+                    });
+
+                    // Add 'selected' to the clicked option
+                    this.classList.add('selected');
+
+                    // You can now store the selected value, e.g., in a hidden input or global variable
+                    console.log(`Selected ${type}: ${value}`);
+                    // Example of storing selected values (you might need to create hidden input fields for this)
+                    // if (type === 'color') {
+                    //     document.getElementById('selected-color-input').value = value;
+                    // }
+                    // if (type === 'style') {
+                    //     document.getElementById('selected-style-input').value = value;
+                    // }
                 });
             });
         });
