logo image path remove '/'

--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
     <nav class="bg-white p-4 shadow-md sticky top-0 z-50">
         <div class="container mx-auto flex justify-between items-center">
             <a class="GAuSPc" aria-hidden="false" tabindex="0">
-                <img src="/image/01_company_logo.png" class="lzy1Td" role="img" aria-label="網站首頁" jsname="SwcDWb">
+                <img src="image/01_company_logo.png" class="lzy1Td" role="img" aria-label="網站首頁" jsname="SwcDWb">
                 <span class="QTKDff text-rose-500">My O!</span>證書套
             </a>
 
