--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My O!專屬證書套</title>
-    <meta property="og:image" content="image/01_company_logo.png">
+    <meta property="og:image" content="https://myo-hk.github.io/image/01_company_logo.png">
     <meta property="og:image:alt" content="My O! 證書套公司 Logo">
     <meta property="og:title" content="My O!專屬證書套">
     <meta property="og:description" content="為您的結婚證書打造設計師級專屬證書套，讓這份愛情的見證永恆閃耀。">
