--- a/index_system.html
+++ b/index_system.html
@@ -83,14 +83,17 @@
     </header>
 
     <main>
-        <section class="relative pt-24 pb-20 md:pt-32 md:pb-28" style="background-image: url('image/hero_hiking_tech3.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+       <section 
+    class="relative pt-24 pb-20 md:pt-32 md:pb-28 bg-cover bg-no-repeat bg-left-center md:bg-center" 
+    style="background-image: url('image/hero_hiking_tech3.png');">
+    
     <div class="absolute inset-0 bg-black opacity-50"></div>
 
     <div class="relative container mx-auto px-6 text-center">
         <div class="max-w-3xl mx-auto">
-            <img src="https://placehold.co/120x120/eef2ff/4338ca?text=Explorer" alt="專業頭像" class="w-24 h-24 md:w-32 md:h-32 rounded-full mx-auto mb-6 shadow-lg border-4 border-white">
+             <img src="image/01_company_logo.png" alt="專業頭像" class="w-24 h-24 md:w-32 md:h-32 rounded-full mx-auto mb-6 shadow-lg border-4 border-white"> 
             <h1 class="text-4xl md:text-6xl font-bold text-white leading-tight mb-4" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">人生是個產品，我幫你打造路線圖。</h1>
-            <p class="text-lg md:text-xl text-gray-200 mb-8" style="text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);">我用產品經理的系統化思維，為你解構旅行、科技與投資的複雜性。停止猜測，開始用一套經過驗證的系統，應對生命中最值得的冒險。</p>
+            <p class="text-lg md:text-xl text-gray-200 mb-8" style="text-shadow: 1px 1px 4px rgba(0, 0, 2505, 0.5);">我用產品經理的系統化思維，為你解構旅行、科技與投資的複雜性。停止猜測，開始用一套經過驗證的系統，應對生命中最值得的冒險。</p>
             <a href="#solution" class="bg-indigo-600 text-white font-bold text-lg px-8 py-4 rounded-lg cta-btn inline-block">探索我的系統</a>
         </div>
     </div>
