--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4331940044118490"
+     crossorigin="anonymous"></script>
+
     <style>
         body {
             font-family: 'Noto Sans TC', sans-serif;
@@ -381,6 +384,8 @@
             });
         }, { threshold: 0.1 });
         revealElements.forEach(el => observer.observe(el));
+
+        
     </script>
 
 </body>
