add js for google ads

--- a/heic-converter.html
+++ b/heic-converter.html
@@ -667,5 +667,6 @@
         });
         /* --- JavaScript 程式碼結束 --- */
     </script>
+<script src="js library/include-ads.js"></script>
 </body>
 </html>
