--- a/index2.html
+++ b/index2.html
@@ -242,5 +242,6 @@
         revealElements.forEach(el => observer.observe(el));
     </script>
 
+<script src="js library/include-ads.js"></script>
 </body>
 </html>
