--- a/index_0.html
+++ b/index_0.html
@@ -163,5 +163,6 @@
         <p>&copy; 2025 你的名字. All Rights Reserved.</p>
     </footer>
 
+<script src="js library/include-ads.js"></script>
 </body>
 </html>
