--- a/trip.html
+++ b/trip.html
@@ -44,7 +44,7 @@
       ]
     }
     </script>
-    
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4331940044118490"
      crossorigin="anonymous"></script>
 
@@ -365,5 +365,6 @@
         revealElements.forEach(el => observer.observe(el));
     </script>
 
+<script src="js library/include-ads.js"></script>
 </body>
 </html>
