--- a/trip.html
+++ b/trip.html
@@ -105,13 +105,13 @@
     <header id="header" class="bg-white/80 backdrop-blur-lg sticky top-0 z-50 shadow-sm">
         <nav class="container mx-auto px-6 py-4">
             <div class="relative flex justify-between items-center md:justify-start">
-                <a href="/index.html" class="text-xl font-bold text-indigo-700 z-10 flex-shrink-0">⌂策略探索家</a>
+                <a href="/index.html" class="text-xl font-bold text-indigo-700 z-10 flex-shrink-0">⬅️ 主頁 > make your own TRIP ✈️</a>
                 
                 <div class="hidden md:flex absolute inset-x-0 justify-center items-center space-x-8">
     
                     <div class="relative group">
                     <a href="/trip.html" class="nav-link text-gray-600 hover:text-indigo-600 px-3 py-2 flex items-center gap-1.5 cursor-pointer">
-                        <span>旅程</span>
+                        <span>旅程 ✈️</span>
                         <svg class="w-4 h-4 transition-transform duration-300 ease-in-out group-hover:rotate-180" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                     </a>
 
