test after folder change

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     
     <title>策略探索家 | 用產品思維，把你的人生打造成最好的產品</title>
     
-    <link rel="canonical" href="https://www.strategy-explorer.com/">
+    <link rel="canonical" href="https://makeyourown.pages.dev/">
 
     <meta property="og:title" content="策略探索家 | 用產品思維，把你的人生打造成最好的產品">
     <meta property="og:description" content="覺得人生卡關？旅行、理財、職涯總是一團亂？我用產品經理的系統化思維，幫你打造清晰的路線圖，把混亂變成機會。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.strategy-explorer.com/">
+    <meta property="og:url" content="https://makeyourown.pages.dev/">
     <meta property="og:image" content="https://placehold.co/1200x630/4338ca/eef2ff?text=策略探索家">
     <meta property="og:site_name" content="策略探索家">
     <meta property="og:locale" content="zh_TW">
